# dactyl-esp32-c6-fw

./: .gitignore  CMakeLists.txt  log.txt  sdkconfig.defaults
main/: CMakeLists.txt  config.h  main.c  matrix.c  matrix.h
main/include/: ble_hid.h  ble_split.h  ble_split_priv.h  common.h  config.h  keycodes.h  keymap.h  matrix.h
main/src/: ble_central.c  ble_hid.c  ble_peripheral.c  ble_split.c  keymap.c  main.c  main_central.c  main_peripheral.c  matrix.c
